Add UI template for events

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,6 @@
+// Overrides
+$spacer: 1.25rem;
+
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "../node_modules/bootstrap/scss/functions";
 
